# Gizmo

./: .gitignore  ARCHITECTURE_ROADMAP.md  BEVY_PARITY_ROADMAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LATENT_BUGS_FIXPLAN.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RELEASING.md  ROADMAP.md  TODO.md  TUTORIAL.md  WGSL_MESA_BUG.md  build_log.txt  check_errors.txt  editor_layout.json  editor_prefs.toml  errors.json  flake.nix  gen_sound.rs  gizmo_durum_analizi.md  gizmo_engine_todo.html  gizmo_engine_todo_v2.html  libscratch.rlib  libscratch_query.rlib  patch_scene.py  patch_vehicle.py  publish_all.sh  rigid_errors.txt  run_debug.sh  run_log.txt  scene.json  scratch  scratch_query  scratch_query.rs  scratch_system  scratch_system.rs  (+16 more)
cradle/: Cargo.toml
cradle/src/: domino.rs  main.rs
crates/gizmo/: Cargo.toml
crates/gizmo-ai/: Cargo.toml
crates/gizmo-ai/src/: behavior_tree.rs  components.rs  goap.rs  lib.rs  navmesh.rs  pathfinding.rs  steering.rs  system.rs  utility_ai.rs
crates/gizmo-analysis/: Cargo.toml
crates/gizmo-analysis/examples/: headless_analysis.rs
crates/gizmo-analysis/src/: analyzer.rs  collector.rs  lib.rs  metrics.rs  panel.rs  physics.rs  plugin.rs  report.rs  snapshot.rs  trace.rs  util.rs
crates/gizmo-animation/: Cargo.toml
crates/gizmo-animation/src/: clip.rs  hermite.rs  ik.rs  lib.rs  player.rs  system.rs
crates/gizmo-app/: Cargo.toml
crates/gizmo-app/src/: dev_console.rs  editor_runtime.rs  egui_ctx.rs  gameplay.rs  headless.rs  lib.rs  plugin.rs  windowed.rs
crates/gizmo-audio/: Cargo.toml
crates/gizmo-audio/src/: lib.rs
crates/gizmo-core/: Cargo.toml
crates/gizmo-core/benches/: ecs_bench.rs  map_bench.rs  par_iter_bench.rs  path_bench.rs  reflect_bench.rs  struct_bench.rs
crates/gizmo-core/src/: archetype.rs  archetype.rs.bak  asset.rs  commands.rs  component.rs  cvar.rs  entity.rs  event.rs  hierarchy.rs  input.rs  lib.rs  logger.rs  observer.rs  pool.rs  profiler.rs  query.rs  registry.rs  state.rs  storage.rs  system.rs  time.rs  window.rs  world.rs  world.rs.bak
crates/gizmo-core/tests/: proptest_ecs.rs  query_filters.rs  sparse_query.rs
crates/gizmo-editor/: Cargo.toml
crates/gizmo-editor/src/: asset_browser.rs  console.rs  editor_state.rs  error.rs  game_view.rs  gui.rs  hierarchy.rs  history.rs  inspector.rs  lib.rs  prefs.rs  profiler_panel.rs  scene_view.rs  toolbar.rs  windows.rs
crates/gizmo-math/: Cargo.toml
crates/gizmo-math/benches/: bounding_bench.rs  curve_bench.rs  frustum_bench.rs  mesh_picking_bench.rs  torus_bench.rs
crates/gizmo-math/src/: aabb.rs  bin_test.rs  bin_test_glam.rs  fixed.rs  frustum.rs  lib.rs  quat.rs  ray.rs  spatial.rs  vec2.rs  vec3.rs  vec4.rs
crates/gizmo-net/: Cargo.toml
crates/gizmo-net/examples/: p2p_rollback_test.rs
crates/gizmo-net/src/: client.rs  interpolation.rs  lib.rs  prediction.rs  protocol.rs  server.rs
crates/gizmo-network/: Cargo.toml
crates/gizmo-network/examples/: p2p_rollback_test.rs
crates/gizmo-network/src/: lib.rs  packet.rs  rollback.rs  snapshot.rs  transport.rs
crates/gizmo-physics/: Cargo.toml
crates/gizmo-physics-core/: Cargo.toml
crates/gizmo-physics-core/src/: body.rs  bvh.rs  collision.rs  error.rs  gjk.rs  lib.rs  narrowphase.rs  quickhull.rs  raycast.rs  shape.rs
crates/gizmo-physics-core/tests/: gjk_distance_robustness.rs  proptest_broadphase.rs  proptest_collision.rs  proptest_raycast.rs  proptest_sat.rs
crates/gizmo-physics-dynamics/: Cargo.toml
crates/gizmo-physics-dynamics/src/: character.rs  lib.rs  oxygen.rs  ragdoll.rs  systems.rs  vehicle.rs
crates/gizmo-physics-rigid/: Cargo.toml
crates/gizmo-physics-rigid/src/: destruction.rs  fracture.rs  integrator.rs  island.rs  lib.rs  pipeline.rs  solver.rs  system.rs  vehicle.rs  world.rs
crates/gizmo-physics-rigid/tests/: analytical.rs  ccd.proptest-regressions  ccd.rs  ccd_analytical.rs  collider_material.rs  determinism.rs  joints_behavior.rs  proptest_dynamics.rs  proptest_fracture.rs  proptest_gearbox.rs  proptest_joints.rs  proptest_multibody.rs  rollback.rs  sleeping.rs  soak_and_golden.rs
crates/gizmo-physics-soft/: Cargo.toml
crates/gizmo-physics-soft/src/: cloth.rs  error.rs  gpu_compute.rs  lib.rs  parallel_compat.rs  rope.rs  soft_body.rs  soft_body.wgsl  system.rs
crates/gizmo-physics-soft/tests/: proptest_soft.rs  zzz_box.rs
crates/gizmo-physics/src/: broadphase.rs  bvh.rs  character.rs  cloth.rs  collision.rs  components.rs  constraints.rs  destruction.rs  epa.rs  error.rs  fluid.wgsl  fracture.rs  gjk.rs  gpu_compute.rs  gpu_fluid.rs  inertia.rs  integration.rs  integrator.rs  island.rs  joints.rs  lib.rs  narrowphase.rs  pipeline.rs  quickhull.rs  race_ai.rs  ragdoll.rs  raycast.rs  rope.rs  shape.rs  soft_body.rs  soft_body.wgsl  solver.rs  system.rs  vehicle.rs  world.rs
crates/gizmo-physics/tests/: broadphase_test.rs  ccd_bisection_tests.rs  ccd_tests.rs  character_tests.rs  collision_tests.rs  compound_shape_test.rs  cube_ramp_test.rs  debug_run.rs  determinism.rs  domino.rs  extreme_tests.rs  friction_ramp_test.rs  gjk_debug_test.rs  hinge_joint_tests.rs  integration_tests.rs  pachinko_test.rs  solver_tests.rs  vehicle_suspension_tests.rs
crates/gizmo-renderer/: Cargo.toml
crates/gizmo-renderer/src/: asset.rs  (+43 more)
crates/gizmo-scene/: Cargo.toml
crates/gizmo-scripting/: Cargo.toml
crates/gizmo-studio/: Cargo.toml
crates/gizmo-ui/: Cargo.toml
crates/yelbegen-app/: Cargo.toml
crates/yelbegen-renderer/: Cargo.toml
crates/yelbegen-scripting/: Cargo.toml
demo/: Cargo.toml
demo-web/: Cargo.toml  README.md  index.html  test.html
demo-web/src/: lib.rs
demo/assets/: low_polly_car.glb  perfect_car.scene  player.lua
demo/src/: basic_scene.rs  camera.rs  components.rs  demo_car.rs  gizmo_input.rs  hot_reload_sys.rs  main.rs  network.rs  race.rs  render_pipeline.rs  sandbox.rs  scene.rs  scene_setup.rs  script_sys.rs  state.rs  systems.rs  ui.rs  update.rs
demo/tests/: cross_process_determinism.rs
server/: Cargo.toml
server/src/: main.rs
tut/: Cargo.toml  test.rs
tut/src/: gpu_demo.rs  main.rs  test_keys.rs
(+450 files in other folders)
