[workspace]
resolver = "2"
members = [
    "crates/*",
    "server",
    "demo",
    "cradle",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
# Minimum Supported Rust Version. Empirically verified (`cargo +1.92.0 check
# --workspace` passes). Floor is set by `egui 0.34` (and its `ecolor`/`egui-wgpu`/
# `egui-winit`), which require rustc 1.92 — the §4c graphics upgrade raised this
# from 1.89. Enforced by the `msrv` CI job. Raising this is a semver-minor.
rust-version = "1.92"
authors = ["Bedir"]
description = "A custom ECS and physics engine aimed for realistic simulations."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bdrtr/Gizmo"
keywords = ["game-engine", "ecs", "physics", "simulation", "gamedev"]
categories = ["game-engines"]

# Bağımlılıkları tek bir yerden yönetmek için (Inherited Dependencies)
[workspace.dependencies]
winit = "0.30"
mimalloc = { version = "0.1", default-features = false }
proptest = "1"
