[package]
name = "cradle"
version.workspace = true
edition.workspace = true

[dependencies]
gizmo-engine = { path = "../crates/gizmo", features = ["audio", "scripting", "scene"] }
gizmo-math = { path = "../crates/gizmo-math" }
gizmo-core = { path = "../crates/gizmo-core" }
pollster = "0.3"
winit = { workspace = true }
mimalloc = { workspace = true }

[[bin]]
name = "domino_visual"
path = "src/domino.rs"
