[package]
name = "demo"
version.workspace = true
edition.workspace = true

[dependencies]
gizmo = { path = "../crates/gizmo", features = ["audio", "editor", "scripting", "scene"] }
gizmo-ai = { path = "../crates/gizmo-ai" }
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "4.0"
image = "0.24"
rayon = "1.11.0"
rand = "0.9.0"
gizmo-net = { version = "0.1.0", path = "../crates/gizmo-net" }
bincode = "1.3.3"
renet = "2.0.0"
