[package]
name = "demo"
version.workspace = true
edition.workspace = true

[dependencies]
gizmo = { path = "../crates/gizmo", features = ["audio", "scripting", "scene"] }
gizmo-ai = { path = "../crates/gizmo-ai" }
pollster = "0.3"
serde = { version = "1.0", features = ["derive"] }

tobj = "4.0"
image = "0.24"
rayon = "1.11.0"
rand = "0.9.0"
gizmo-net = { version = "0.1.0", path = "../crates/gizmo-net" }
bincode = "1.3.3"
renet = "2.0.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
