[package]
publish = false
name = "demo"
version.workspace = true
edition.workspace = true
default-run = "bevy_3d_scene"

[dependencies]
gizmo = { package = "gizmo-engine", path = "../crates/gizmo", features = ["audio", "scripting", "scene", "editor", "render", "window", "ui"] }
pollster = "0.3"
rand = "0.8"
winit = { workspace = true }
bytemuck = "1.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-tracy = "0.11.4"


[[bin]]
name = "fluid_rigid"
path = "src/bin/fluid_rigid.rs"

[[bin]]
name = "advanced_physics"
path = "src/bin/advanced_physics.rs"

[[bin]]
name = "headless_stress_test"
path = "src/bin/headless_stress_test.rs"

[[bin]]
name = "car_demo"
path = "src/bin/car_demo.rs"

[[bin]]
name = "bevy_3d_scene"
path = "src/bin/bevy_3d_scene.rs"

[[bin]]
name = "bevy_anisotropy"
path = "src/bin/bevy_anisotropy.rs"
