[package]
name = "tut"
version.workspace = true
edition.workspace = true

[dependencies]
gizmo = { path = "../crates/gizmo", features = ["audio", "scripting", "scene"] }
pollster = "0.3"
winit = { workspace = true }

[[bin]]
name = "gpu_demo"
path = "src/gpu_demo.rs"

[[bin]]
name = "fluid_rigid"
path = "src/bin/fluid_rigid.rs"

