[package]
name = "tut"
version.workspace = true
edition.workspace = true
default-run = "test_sandbox"

[dependencies]
gizmo-engine = { path = "../crates/gizmo", features = ["audio", "scripting", "scene"] }
pollster = "0.3"
rand = "0.8"
winit = { workspace = true }
bytemuck = "1.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-tracy = "0.11.4"


[[bin]]
name = "fluid_rigid"
path = "src/bin/fluid_rigid.rs"

[[bin]]
name = "advanced_physics"
path = "src/bin/advanced_physics.rs"

