[package]
name = "gizmo-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-math = { path = "../gizmo-math" , version = "0.1.2" }
gizmo-core = { path = "../gizmo-core" , version = "0.1.2" }
gizmo-physics = { path = "../gizmo-physics" , version = "0.1.2" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.44"
