[package]
name = "gizmo-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-math = { path = "../gizmo-math" , version = "0.1.5" }
gizmo-core = { path = "../gizmo-core" , version = "0.1.5" }
gizmo-physics-core = { path = "../gizmo-physics-core" , version = "0.1.5" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid" , version = "0.1.5" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.44"
