[package]
name = "gizmo-animation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gizmo-app = { version = "0.2.0", path = "../gizmo-app", default-features = false }
gizmo-core = { version = "0.2.0", path = "../gizmo-core" }
gizmo-math = { version = "0.2.0", path = "../gizmo-math" }
gizmo-physics-core = { version = "0.2.0", path = "../gizmo-physics-core" }
