[package]
name = "gizmo-animation"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
# OFF by default so the crate's default public API is dependency-light (Stage A:
# only gizmo-core/math/physics-core). The dependency-light
# `register(world, schedule)` entry point is always available.
#
# NOTE: the former `app` feature (which pulled in `gizmo-app` for the
# `AnimationPlugin` convenience wrapper) has been removed: `gizmo-renderer` now
# depends on this crate for the pure-data skeletal-animation types, and a
# `gizmo-animation -> gizmo-app -> gizmo-renderer -> gizmo-animation` package
# cycle is rejected by Cargo. Register the animation system via `register(...)`.
default = []

[dependencies]
gizmo-core = { version = "0.8.0", path = "../gizmo-core" }
gizmo-math = { version = "0.8.0", path = "../gizmo-math" }
gizmo-physics-core = { version = "0.8.0", path = "../gizmo-physics-core" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
