[package]
name = "gizmo-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.1.0" }
gizmo-renderer = { path = "../gizmo-renderer" , version = "0.1.0" }
gizmo-math = { path = "../gizmo-math" , version = "0.1.0" }
gizmo-physics = { path = "../gizmo-physics" , version = "0.1.0" }
winit = "0.29"
wgpu = { version = "0.20", features = ["fragile-send-sync-non-atomic-wasm", "webgl"] }
pollster = "0.3"
egui = "0.28"
gizmo-editor = { path = "../gizmo-editor" , version = "0.1.0" }
gizmo-audio = { path = "../gizmo-audio" , version = "0.1.0" }
gizmo-scene = { path = "../gizmo-scene" , version = "0.1.0" }
image = "0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"
backtrace = "0.3.76"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "HtmlElement",
] }
web-time = "0.2"
