[package]
name = "gizmo-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.1.7" }
gizmo-math = { path = "../gizmo-math" , version = "0.1.7" }
tracing = "0.1.44"

# Optional dependencies
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.1.7", optional = true }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid", version = "0.1.7", optional = true }
gizmo-renderer = { path = "../gizmo-renderer" , version = "0.1.7", optional = true }
gizmo-audio = { path = "../gizmo-audio" , version = "0.1.7", optional = true }
gizmo-editor = { path = "../gizmo-editor" , version = "0.1.7", optional = true }
gizmo-scene = { path = "../gizmo-scene" , version = "0.1.7", optional = true }
gizmo-net = { path = "../gizmo-net", version = "0.1.7", optional = true, default-features = false }
winit = { version = "0.29", optional = true }
wgpu = { version = "0.20", features = ["fragile-send-sync-non-atomic-wasm", "webgl"], optional = true }
pollster = { version = "0.3", optional = true }
egui = { version = "0.28", optional = true }
image = { version = "0.25", optional = true }

[features]
default = ["window", "render", "audio", "physics", "scene", "editor", "network"]
headless = ["physics", "network"]
network = ["dep:gizmo-net", "gizmo-net/rollback"]
window = ["dep:winit"]
render = ["dep:wgpu", "dep:gizmo-renderer", "dep:pollster", "dep:image", "window"]
audio = ["dep:gizmo-audio"]
physics = ["dep:gizmo-physics-core", "dep:gizmo-physics-rigid"]
editor = ["dep:gizmo-editor", "dep:egui", "render"]
scene = ["dep:gizmo-scene"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"
backtrace = "0.3.76"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
log = "0.4"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "HtmlElement",
] }
web-time = "0.2"
