[package]
name = "gizmo-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gizmo-core = { path = "../gizmo-core" , version = "0.8.0" }
gizmo-math = { path = "../gizmo-math" , version = "0.8.0" }
tracing = "0.1.44"

# Optional dependencies
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.8.0", optional = true }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid", version = "0.8.0", optional = true }
gizmo-physics-dynamics = { path = "../gizmo-physics-dynamics", version = "0.8.0", optional = true }
gizmo-renderer = { path = "../gizmo-renderer" , version = "0.8.0", optional = true }
gizmo-audio = { path = "../gizmo-audio" , version = "0.8.0", optional = true }
gizmo-editor = { path = "../gizmo-editor" , version = "0.8.0", optional = true }
gizmo-scene = { path = "../gizmo-scene" , version = "0.8.0", optional = true }
gizmo-net = { path = "../gizmo-net", version = "0.8.0", optional = true, default-features = false }
winit = { version = "0.30", optional = true }
wgpu = { version = "29", features = ["fragile-send-sync-non-atomic-wasm", "webgl"], optional = true }
pollster = { version = "0.3", optional = true }
egui = { version = "0.34", optional = true }
egui-winit = { version = "0.34", default-features = false, features = ["links"], optional = true }
egui-wgpu = { version = "0.34", optional = true }
image = { version = "0.25", optional = true }

[features]
default = ["window", "render", "audio", "physics", "scene", "editor", "network"]
headless = ["physics", "network"]
network = ["dep:gizmo-net", "gizmo-net/rollback"]
window = ["dep:winit"]
render = ["dep:wgpu", "dep:gizmo-renderer", "dep:pollster", "dep:image", "window"]
audio = ["dep:gizmo-audio"]
physics = ["dep:gizmo-physics-core", "dep:gizmo-physics-rigid", "dep:gizmo-physics-dynamics"]
# `egui` is the immediate-mode overlay UI layer (the egui runtime + `set_ui`
# hook + dev console). It does NOT pull in the editor crate, so a game can use
# an egui HUD without the full editor.
egui = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu", "render"]
# `editor` is the full in-engine editor (EditorState, scene/game viewport RTT
# management, scene save/load). It is layered on top of `egui`, and needs
# `scene` for its save/load request handling.
editor = ["egui", "scene", "dep:gizmo-editor"]
scene = ["dep:gizmo-scene", "dep:gizmo-scripting"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"
backtrace = "0.3.76"
# Pulled in by `scene` so the runtime can register the `Script` scene component
# (gizmo-scene itself no longer depends on scripting — keeps scene GPU-free).
# Target-gated: mlua (C Lua) cannot build for wasm32-unknown-unknown, so on the
# web the `scene` feature loads scenes without Script components (scripting is
# part of the deferred web backlog). `dep:gizmo-scripting` in the `scene`
# feature is a no-op on wasm32.
gizmo-scripting = { path = "../gizmo-scripting" , version = "0.8.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
log = "0.4"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Node",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "HtmlElement",
] }
web-time = "0.2"
