[package]
name = "gizmo-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
log = "0.4.29"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
gizmo-core = { path = "../gizmo-core" , version = "0.1.2" }
tracing = "0.1.44"
