[package]
name = "gizmo-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
gizmo-core = { path = "../gizmo-core" , version = "0.8.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.17"

# Web: cpal'ın WebAudio (AudioContext) backend'i. Tarayıcı autoplay politikası
# gereği ses ancak bir kullanıcı jestinden sonra başlar; AudioManager::new'in
# Result sözleşmesi bunu zaten kaldırıyor (başarısızlıkta sessiz devam).
[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.17", features = ["wasm-bindgen"] }
