[package]
name = "gizmo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
chrono = "0.4.44"
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
ron = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
