[package]
name = "gizmo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
chrono = "0.4.44"
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
ron = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[dev-dependencies]
bevy_reflect = { version = "0.15.1", features = ["functions"] }
chacha20 = "0.10.0"
criterion = "0.8.2"
rand = "0.10.1"
bevy_tasks = "0.15"

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "reflect_bench"
harness = false

[[bench]]
name = "map_bench"
harness = false

[[bench]]
name = "path_bench"
harness = false

[[bench]]
name = "struct_bench"
harness = false

[[bench]]
name = "par_iter_bench"
harness = false
