[package]
name = "gizmo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
# Optional `bevy_reflect` integration. When OFF (the default), `bevy_reflect`
# does not appear anywhere in this crate's public API — a hard requirement for a
# stable 1.0 surface. When ON, components can be registered for reflection-based
# (de)serialization via `ComponentRegistry::register_reflect`.
reflect = ["dep:bevy_reflect"]

[dependencies]
bevy_reflect = { version = "0.15.1", features = ["functions"], optional = true }
crossbeam-queue = "0.3.12"
rayon = "1.11.0"
ron = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.44"

[dev-dependencies]
chacha20 = "0.10.0"
criterion = "0.8.2"
rand = "0.10.1"
bevy_tasks = "0.15"
proptest = { workspace = true }

[[bench]]
name = "ecs_bench"
harness = false

[[bench]]
name = "reflect_bench"
harness = false
required-features = ["reflect"]

[[bench]]
name = "map_bench"
harness = false
required-features = ["reflect"]

[[bench]]
name = "path_bench"
harness = false
required-features = ["reflect"]

[[bench]]
name = "struct_bench"
harness = false
required-features = ["reflect"]

[[bench]]
name = "par_iter_bench"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "0.2"
