[package]
name = "gizmo-editor"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
egui = "0.34"
gizmo-core = { path = "../gizmo-core" , version = "0.2.0" }
gizmo-math = { path = "../gizmo-math" , version = "0.2.0" }
gizmo-physics-core = { path = "../gizmo-physics-core" , version = "0.2.0" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid" , version = "0.2.0" }
gizmo-renderer = { path = "../gizmo-renderer" , version = "0.2.0" }
gizmo-ai = { path = "../gizmo-ai" , version = "0.2.0" }
egui_dock = { version = "0.19", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
rfd = "0.17.2"
gizmo-scene = { path = "../gizmo-scene" , version = "0.2.0" }
dirs = "6.0.0"
transform-gizmo-egui = "0.9"
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gizmo-scripting = { version = "0.2.0", path = "../gizmo-scripting" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "0.2"
