[package]
name = "gizmo-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
glam = { version = "=0.32.1", features = ["serde", "bytemuck", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }
