[package]
name = "gizmo-math"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
# NOTE: `bevy_math` is intentionally NOT a regular dependency. The public math
# vocabulary is re-exported directly from `glam` (see `lib.rs` and RELEASING §3),
# so a regular `bevy_math` dep would only pull `bevy_reflect` into the Stage A
# production tree for no public-API benefit. It remains a dev-dependency below
# purely as a comparison baseline for the benches (dev-deps do not propagate to
# downstream consumers).
getrandom = { version = "0.2", features = ["js"] }
glam = { version = "0.29", features = ["serde", "bytemuck", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
bevy_math = "0.15"
rand = "0.8"
bevy_picking = { version = "0.15", features = ["bevy_mesh_picking_backend"] }
bevy_mesh = "0.15"

[[bench]]
name = "frustum_bench"
harness = false

[[bench]]
name = "curve_bench"
harness = false

[[bench]]
name = "bounding_bench"
harness = false

[[bench]]
name = "mesh_picking_bench"
harness = false

[[bench]]
name = "torus_bench"
harness = false
