[package]
name = "gizmo-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-core = { path = "../gizmo-core" }
gizmo-math = { path = "../gizmo-math" }
gizmo-physics-core = { path = "../gizmo-physics-core" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bincode = "1.3.3"
