[package]
name = "gizmo-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-core = { path = "../gizmo-core", version = "0.1.3" }
gizmo-math = { path = "../gizmo-math", version = "0.1.3" }
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.1.3" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid", version = "0.1.3" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
bincode = "1.3.3"
