[package]
name = "gizmo-physics-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
# Optional `bevy_reflect` integration (see `gizmo-core`'s `reflect` feature).
# OFF by default so `bevy_reflect` is absent from the public API at 1.0.
reflect = ["dep:bevy_reflect", "gizmo-core/reflect"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
gizmo-core = { path = "../gizmo-core", version = "0.8.0" }
gizmo-math = { path = "../gizmo-math", version = "0.8.0" }
arrayvec = "0.7.6"
tracing = "0.1.44"
bevy_reflect = { version = "0.15.1", features = ["glam"], optional = true }

[dev-dependencies]
proptest = { workspace = true }
