[package]
name = "gizmo-physics-dynamics"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
gizmo-core = { path = "../gizmo-core", version = "0.2.0" }
gizmo-math = { path = "../gizmo-math", version = "0.2.0" }
gizmo-physics-core = { path = "../gizmo-physics-core", version = "0.2.0" }
gizmo-physics-rigid = { path = "../gizmo-physics-rigid", version = "0.2.0" }
